--- a/config.toml
+++ b/config.toml
@@ -15,6 +15,12 @@ tag = "docs"
 icon = "book"
 
 [[ params.nav ]]
+name = "moredocs"
+tag = "moredocs"
+icon = "book"
+
+
+[[ params.nav ]]
 name = "twitch"
 tag = "twitch"
 icon = "twitch"
