--- a/config.toml
+++ b/config.toml
@@ -5,6 +5,19 @@ title = "Stream Speed Dial"
 theme = "slate"
 OpenLinksInNewWindow = false
 
+[ params ]
+BackgroundImages = [
+  "bg/b1920-000.jpg",
+  "bg/b1920-001.jpg",
+  "bg/b1920-002.jpg",
+  "bg/b1920-003.jpg",
+  "bg/b1920-004.jpg"
+]
+
+Favicon = "favicon.ico"
+BackgroundStyle = "#657383"
+OpenLinksInNewWindow = true
+
 [[ params.nav ]]
 name = "search"
 tag = "search"
